[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palindrome_westengine"
version = "0.0.1"
authors = [
	{name="James Emiade", email="emiadejesunifemi@gmail.com"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/westengine/python_package_tutorial"
"Bug Tracker" = "https://github.com/westengine/python_package_tutorial/issues"
